Bug #9771
loader.efi: 'handles' is used uninitialized in comconsole.c
Start date:
2018-08-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error when warnings are enabled:
../comconsole.c: In function 'efi_serial_init': ../comconsole.c:132:9: warning: 'handles' is used uninitialized in this function [-Wuninitialized] status = BS->LocateHandle(ByProtocol, &serial, NULL, &bufsz, handles); ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
It should be harmless because we are asking for size for the handles array (bufsz is set to 0), but lets play safe and also set handles to NULL.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d2df75e755ab7973e38d93f9937214d0062c20e0
commit d2df75e755ab7973e38d93f9937214d0062c20e0 Author: Toomas Soome <tsoome@me.com> Date: 2018-09-04T15:10:05.000Z 9771 loader.efi: 'handles' is used uninitialized in comconsole.c Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Dan McDonald <danmcd@joyent.com>